[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "commit_companion"
authors = [{name = "Zack Nelson", email = "zacknelson15@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/nelson-zack/commit-companion"
